Fixed scrollbar issue

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -10,5 +10,5 @@
 
 .sidebar-container > .page {
     height: calc(100% - 42px);
-    overflow: scroll;
+    overflow: auto;
 }
